# ClothSimCmake

./: .gitignore  CMakeLists.txt  Cloth.cpp  Cloth.h  Constraint.cpp  Constraint.h  LICENSE  Particle.cpp  Particle.h  README.md  SDLWindow.cpp  SDLWindow.h  SimulationParams.cpp  SimulationParams.h  main.cpp
